--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,5 +1,7 @@
 server.port=1000
 springdoc.api-docs.path=/api-docs
 
-ldap.armut.username=ali
-ldap.armut.lastname=kaya
+username=ali
+lastname=kaya
+
+env = test
