--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=ERROR,DEBUG,INFO, file
+log4j.rootLogger=ERROR,INFO, file
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
  
